@@ -4,12 +4,19 @@ use strict;
 sub new {
     my $self = shift;
     my $list = shift;
-    return bless $list,ref $self || $self;
+    my $total= shift;
+    $total ||= @$list;
+    return bless {list=>$list,
+		  total=>$total},ref $self || $self;
 }
 
 sub next_seq {
     my $self = shift;
-    return shift @$self;
+    return shift @{$self->{list}};
+}
+
+sub total {
+    shift->{total};
 }
 
 1;
